<resources>
    <string name="app_name">Flip</string>
    <string name="category_error">Algo deu errado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_step_one">COM O FLIP APP MEMORIZAR FICOU MUITO MAIS FÁCIL</string>
    <string name="onboarding_step_two">CRIE QUANTOS CARDS QUISER!</string>
    <string name="onboarding_step_three">COMPLETE SEUS OBJETIVOS!</string>

    <string name="flashcard_error">Algo deu errado</string>
    <string name="cloud">Cloud</string>

    <string name="text_title_delete_dialog_flash">PEDIDO PARA DELETAR</string>
    <string name="text_message_dialog_flash">Essa ação ira deletar permanentemente o seu flash card, você tem certeza que quer realizar essa operação?</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancelar</string>

    <string name="title_category_list">Categorias</string>
    <string name="title_flash_card_list">Flash cards</string>
    <string name="title_create_category">Criar categoria</string>
    <string name="title_category_image_list">Lista de categoria imagem</string>
    <string name="title_create_flash_card">Create Flash Cards</string>
    <string name="share">Share</string>
    <string name="delete_category">Deletar</string>
    <string name="category_empty_message">Nada por aqui</string>
    <string name="category_error_message">Algo deu errado</string>
    <string name="loading">Carregando…</string>
    <string name="create_category_success">Successo</string>
    <string name="delete_category_success">Categoria deletada com sucesso!</string>
    <string name="delete_category_error">Algo deu errado, operação não realizada!</string>
    <string name="create_category_failed">Falhou</string>
    <string name="create_flashcard_success">Successo</string>
    <string name="category_name">Nome da categoria</string>
    <string name="select_image">Selecionar Imagem</string>
    <string name="save">Salvar</string>
    <string name="missing_category_name">Digite o nome da sua categoria</string>
    <string name="missing_category_image">Selecione uma imagem</string>
    <string name="create_flashcard_back_empty">Preencha o verso do seu flash card</string>
    <string name="create_flashcard_front_empty">preencha a frente do seu card</string>
    <string name="flashcard_front_hint">Texto frente</string>
    <string name="flashcard_back_hint">Texto verso</string>
</resources>