<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtFlashcardFrontCreate"
            style="@style/AppCompatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flashcard_front_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtFlashcardBackCreate"
            style="@style/AppCompatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flashcard_back_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveFlashcardCreate"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_2"
        android:text="@string/save" />

</LinearLayout>