<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtCategoryNameCreate"
            style="@style/AppCompatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ctnSelectImageCategoryCreate"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="@dimen/size_2"
        android:background="@color/category_1"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout">

        <ImageView
            android:id="@+id/imgCreateCategory"
            android:layout_width="0dp"
            android:padding="@dimen/size_2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/ic_category_1" />

        <TextView
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/select_image"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveCategory"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_2"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>